--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <ul class="hero-ul">
             <li class="hs">
                <div class=" hi"><svg class="hero-icon">
-                <use href="./images/symbol-defs.svg#icon-antenna"></use></svg>
+                <use href="./images/icons.svg#icon-antene"></use></svg>
                 </div>
               <h5>ATTENTION TO DETAILS</h5>
               <p class="hero-section__text">
@@ -85,7 +85,7 @@
             </li>
             <li class="hs">
                <div class=" hi"><svg class="hero-icon">
-                <use href="./images/symbol-defs.svg#icon-clock"></use></svg>
+                <use href="./images/icons.svg#icon-clock"></use></svg>
                 </div>
               <h5>PUNCTUALITY</h5>
               <p class="hero-section__text">
@@ -95,7 +95,7 @@
             </li>
             <li class="hs">
                <div class=" hi"><svg class="hero-icon">
-                <use href="./images/symbol-defs.svg#icon-laptop"></use></svg>
+                <use href="./images/icons.svg#icon-laptop"></use></svg>
                 </div>
               <h5>PLANNING</h5>
               <p class="hero-section__text">
@@ -106,7 +106,7 @@
             
             <li class="hs">
                <div class=" hi"><svg class="hero-icon">
-                <use href="./images/symbol-defs.svg#icon-astronaut"></use></svg>
+                <use href="./images/icons.svg#icon-astronaut"></use></svg>
                 </div>
               <h5>MODERN TECHNOLOGIES</h5>
               <p class="hero-section__text">
@@ -192,22 +192,22 @@
         <h3 class="tittle">Regular Customers</h3>
        <ul>
         <li>
-          <svg><use href="./images/symbol-defs.svg#icon-yaco"/></svg>
+          <svg><use href="./images/icons.svg#icon-yaco"/></svg>
         </li>
          <li>
-          <svg><use href="./images/symbol-defs.svg#icon-comapny-tg-hire"/></svg>
+          <svg><use href="./images/icons.svg#icon-tagline"/></svg>
         </li>
          <li>
-          <svg><use href="./images/symbol-defs.svg#icon-company"/></svg>
+          <svg><use href="./images/icons.svg#icon-company"/></svg>
         </li>
          <li>
-          <svg><use href="./images/symbol-defs.svg#icon-yaco"/></svg>
+          <svg><use href="./images/icons.svg#icon-foster"/></svg>
         </li>
          <li>
-          <svg><use href="./images/symbol-defs.svg#icon-brand"/></svg>
+          <svg><use href="./images/icons.svg#icon-brand"/></svg>
         </li>
          <li>
-          <svg><use href="./images/symbol-defs.svg#icon-company-tag-line"/></svg>
+          <svg><use href="./images/icons.svg#icon-icon-tagline"/></svg>
         </li>
        </ul>
      </div>
