--- a/portofoliu.html
+++ b/portofoliu.html
@@ -45,12 +45,14 @@
         <!--info section-->
         <div>
           <ul class="header__info">
-            <li>
-              <a class="header__mail" href="mailto:info@devstudio.com"
+            <li><svg class="icon1"><use href="./images/icons.svg#icon-envelope"></svg>
+              <a class="header__mail"  href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li><a href="tel:+12127724150">12127724150</a></li>
+           <li>
+            <svg class="icon2"><use href="./images/icons.svg#icon-smartphone"></svg> 
+              <a class="header__phone" href="tel:+12127724150">12127724150</a></li>
           </ul>
         </div>
       </div>
