--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <!--footer section-->
     <footer class="footer">
       <div class="container">
-       <div class="footer1"><h3>
+       <div class="footer1"><div><h3>
           <a class="footer__logo" href="#">Web<span>Studio</span></a>
         </h3>
         <address class="footer__adr">695 Park Ave, NY 10065, USA</address>
@@ -326,29 +326,31 @@
         <a class="footer__tel" href="tel:+12127724150">+12127724150</a>
       </div>
       <div class="footer2">
-        <p>FIND US ON</p>
-        <ul class="social-icon">
+      <div class="footer2-p2">
+        <p class="tittle-footer">FIND US ON</p>
+        <ul class="footer-social-icon">
                 <li>
                   <a href="">
-                    <Svg class="icon"><use href="./images/icons.svg#icon-instagram""></use></Svg>
+                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-instagram""></use></Svg>
                   </a>
                 </li>
                 <li>
                   <a href="">
-                    <Svg class="icon"><use href="./images/icons.svg#icon-twitter"></use></Svg>
+                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-twitter"></use></Svg>
                   </a>
                 </li>
                 <li>
                   <a href="">
-                    <Svg class="icon"><use href="./images/icons.svg#icon-facebook"></use></Svg>
+                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-facebook"></use></Svg>
                   </a>
                 </li>
                 <li>
                   <a href="">
-                    <Svg class="icon"><use href="./images/icons.svg#icon-linkedin"></use></Svg>
+                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-linkedin"></use></Svg>
                   </a>
                 </li>
               </ul>
+      </div>
       </div>
       </div> 
     </footer>
