--- a/portofoliu.html
+++ b/portofoliu.html
@@ -73,12 +73,12 @@
         <!--images section-->
         <section class="img">
           <ul class="images">
-            <li class="img-p">
+            <li class="img-list">
               <img src="images/Technoduck.jpg" alt="laptop" width="150" />
               <h5>Technoduck</h5>
               <h6>Web-site</h6>
             </li>
-            <li class="img-p">
+            <li class="img-list">
               <img
                 src="images/Poster-New-Orlean-vs-Golden-Star.jpg"
                 alt="poster"
@@ -87,7 +87,7 @@
               <h5>Poster New Orlean vs Golden Star</h5>
               <h6>Design</h6>
             </li>
-            <li class="img-p">
+            <li class="img-list">
               <img
                 src="images/Seafood-Restaurant.jpg"
                 alt="seafood-restaurant"
@@ -97,7 +97,7 @@
               <h6>Apps</h6>
             </li>
 
-            <li class="img-p">
+            <li class="img-list">
               <img
                 src="images/Project-Prime.jpg"
                 alt="ear-phones"
@@ -106,12 +106,12 @@
               <h5>Project Prime</h5>
               <h6>Marketing</h6>
             </li>
-            <li class="img-p">
+            <li class="img-list">
               <img src="images/Project-Boxes.jpg" alt="two-boxex" width="150" />
               <h5>Project Boxes</h5>
               <h6>Apps</h6>
             </li>
-            <li class="img-p">
+            <li class="img-list">
               <img
                 src="images/Inspiration-has-no-Borders.jpg"
                 alt="monitor-pc"
@@ -121,17 +121,17 @@
               <h6>Web-site</h6>
             </li>
 
-            <li class="img-p">
+            <li class="img-list">
               <img src="images/Limited-Edition.jpg" alt="book" width="150" />
               <h5>Limited Edition</h5>
               <h6>Design</h6>
             </li>
-            <li class="img-p">
+            <li class="img-list">
               <img src="images/Project-LAB.jpg" alt="book-mark" width="150" />
               <h5>Project LAB</h5>
               <h6>Marketing</h6>
             </li>
-            <li class="img-p">
+            <li class="img-list">
               <img
                 src="images/Growing-Business.jpg"
                 alt="laptop-description"
@@ -145,10 +145,10 @@
       </div>
     </main>
 
-    <!--footer section-->
+ <!--footer section-->
     <footer class="footer">
       <div class="container">
-        <h3>
+       <div class="footer1"><div><h3>
           <a class="footer__logo" href="#">Web<span>Studio</span></a>
         </h3>
         <address class="footer__adr">695 Park Ave, NY 10065, USA</address>
@@ -159,6 +159,34 @@
         </p>
         <a class="footer__tel" href="tel:+12127724150">+12127724150</a>
       </div>
+      <div class="footer2">
+      <div class="footer2-p2">
+        <p class="tittle-footer">FIND US ON</p>
+        <ul class="footer-social-icon">
+                <li>
+                  <a href="">
+                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-instagram""></use></Svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-twitter"></use></Svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-facebook"></use></Svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-linkedin"></use></Svg>
+                  </a>
+                </li>
+              </ul>
+      </div>
+      </div>
+      </div> 
     </footer>
   </body>
 </html>
