--- a/portofoliu.html
+++ b/portofoliu.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -45,14 +45,20 @@
         <!--info section-->
         <div>
           <ul class="header__info">
-            <li><svg class="icon1"><use href="./images/icons.svg#icon-envelope"></svg>
-              <a class="header__mail"  href="mailto:info@devstudio.com"
+            <li>
+              <svg class="icon1">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              <a class="header__mail" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-           <li>
-            <svg class="icon2"><use href="./images/icons.svg#icon-smartphone"></svg> 
-              <a class="header__phone" href="tel:+12127724150">12127724150</a></li>
+            <li>
+              <svg class="icon2">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              <a class="header__phone" href="tel:+12127724150">12127724150</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -145,48 +151,57 @@
       </div>
     </main>
 
- <!--footer section-->
+    <!--footer section-->
     <footer class="footer">
       <div class="container">
-       <div class="footer1"><div><h3>
-          <a class="footer__logo" href="#">Web<span>Studio</span></a>
-        </h3>
-        <address class="footer__adr">695 Park Ave, NY 10065, USA</address>
-        <p class="footer__m">
-          <a class="footer__mail" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </p>
-        <a class="footer__tel" href="tel:+12127724150">+12127724150</a>
+        <div class="footer1">
+          <h3>
+            <a class="footer__logo" href="#">Web<span>Studio</span></a>
+          </h3>
+          <address class="footer__adr">695 Park Ave, NY 10065, USA</address>
+          <p class="footer__m">
+            <a class="footer__mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </p>
+          <a class="footer__tel" href="tel:+12127724150">+12127724150</a>
+        </div>
+        <div class="footer2">
+          <div class="footer2-p2">
+            <p class="tittle-footer">FIND US ON</p>
+            <ul class="footer-social-icon">
+              <li>
+                <a href="">
+                  <svg class="icon-footer">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <svg class="icon-footer">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <svg class="icon-footer">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <svg class="icon-footer">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="footer2">
-      <div class="footer2-p2">
-        <p class="tittle-footer">FIND US ON</p>
-        <ul class="footer-social-icon">
-                <li>
-                  <a href="">
-                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-instagram""></use></Svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-twitter"></use></Svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-facebook"></use></Svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <Svg class="icon-footer"><use href="./images/icons.svg#icon-linkedin"></use></Svg>
-                  </a>
-                </li>
-              </ul>
-      </div>
-      </div>
-      </div> 
     </footer>
   </body>
 </html>
