--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+div<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -347,6 +347,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer1">
+       
           <h3>
             <a class="footer__logo" href="#">Web<span>Studio</span></a>
           </h3>
@@ -357,7 +358,8 @@
             >
           </p>
           <a class="footer__tel" href="tel:+12127724150">+12127724150</a>
-        </div>
+       
+      </div>
         <div class="footer2">
           <div class="footer2-p2">
             <p class="tittle-footer">FIND US ON</p>
