--- a/portofoliu.html
+++ b/portofoliu.html
@@ -155,6 +155,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer1">
+          <div>
           <h3>
             <a class="footer__logo" href="#">Web<span>Studio</span></a>
           </h3>
@@ -165,6 +166,7 @@
             >
           </p>
           <a class="footer__tel" href="tel:+12127724150">+12127724150</a>
+        </div>
         </div>
         <div class="footer2">
           <div class="footer2-p2">
