--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div>
           <ul class="header__info">
             <li>
-              <svg class="icon1">
+              <svg class="icons-header">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               <a class="header__mail" href="mailto:info@devstudio.com"
@@ -54,7 +54,7 @@
               >
             </li>
             <li>
-              <svg class="icon2">
+              <svg class="icons-header">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               <a class="header__phone" href="tel:+12127724150">12127724150</a>
